// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense correctly 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $12.23
  </p>
</div>
`;

exports[`should render ExpensesSummary with 2 expenses correctly 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totalling 
    $12.55
  </p>
</div>
`;
